# sarf-atlas

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  context.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  schema_change.md
.github/workflows/: ci.yml
configs/: paper1.example.toml
docs/: CLI.md  artifact_schema_guide.md  backend_guide.md  command_contract.md  design-notes.md  evaluation_diagnostics.md  examples.md  paper_style_workflow.md  release_checklist.md  release_notes_v0_4_0.md  v0_1_workflow.md  v0_3_paper_workflow.md
examples/: paper_style_experiment.toml  run_v0_1_example.sh
examples/baseline_runner/: README.md  char_ngram.results.json  char_ngram.summary.json  splits.json
examples/baseline_runner/baselines/: README.md  char_ngram.toml  majority.toml
examples/paper1_reproduction/: README.md  experiment.toml
examples/paper1_reproduction/mock_backend/: hidden_states.json  positions.json  report.json  tokenization.json
examples/paper_style/: experiment.toml  tiny_morphology.jsonl
papers/paper1-leakage-aware-probing/: README.md  manifest.template.toml  notes.md
professor_packet/: CHECKLIST.md  known_limitations.md  one_page_summary.md  questions_for_review.md  repo_links.md  reproducibility_notes.md
scripts/: README.md
smoke/: README.md  TOKENIZATION_SMOKE.md  export_tokenizer_json_metadata.py  llama_cpp_mock_smoke.toml  llama_cpp_smoke.example.toml  llama_cpp_tokenize_extract.py  mock_llama_ember_extract.py  prompts.small.jsonl  run_logits_python_smoke.sh  run_native_logits_reference_smoke.sh  run_smoke_dry_run.sh  run_tokenization_parity_smoke.sh
smoke/fixtures/: mock-model.gguf
src/sarf/: __init__.py  __main__.py  artifacts.py  baselines.py  cli.py  dataset.py  diagnostics.py  ember_config.py  eval_scaffold.py  experiment.py  io.py  project.py  prompts.py  schemas.py  splits.py  summary.py  tokenization.py  toy.py  validation.py  workflow.py
src/sarf/backends/: __init__.py  ember.py  files.py  llama_cpp.py
tests/: test_cli_backends.py  test_cli_v0_2.py  test_cli_v0_3.py  test_cli_v0_4.py  test_paper1_reproduction_example.py
