[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sarf-atlas"
version = "0.1.0"
description = "Backend-agnostic workflow scaffolding for Arabic morphology probing experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "Sarf Atlas contributors" },
]
keywords = ["arabic", "morphology", "probing", "research", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
sarf = "sarf.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
