[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sarf-atlas"
version = "0.9.0"
description = "Paper-style workflow preparation for Arabic morphology probing experiments."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
authors = [
  { name = "Sarf Atlas contributors" },
]
keywords = ["arabic", "morphology", "probing", "research", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/voidwest/sarf-atlas"
Roadmap = "https://github.com/voidwest/sarf-atlas/blob/main/ROADMAP.md"
Issues = "https://github.com/voidwest/sarf-atlas/issues"

[project.scripts]
sarf = "sarf.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
